--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div class="container">
     <div class="shutter"></div>
     <div class="shutter"></div>
+    <!-- andrej -->
 </div>
 </body>
 </html>
