--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="shutter"></div>
     <div class="shutter"></div>
-    <!-- andrej  -->
+    <!-- Andrej  -->
 </div>
 </body>
 </html>
