--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <div class="container">
     <div class="shutter"></div>
     <div class="shutter"></div>
+    <div class="shutter"></div>
+    <div class="shutter"></div>
+    <div class="shutter"></div>
+    <div class="shutter"></div>
     <!--Hej, från Gabriella-->
     <!-- Andrej -->
     <!-- Hello this is Oliver Ström and this is my comment -->
