--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <!-- Emma -->
     <!--test igen-->
     <!-- hgfhg -->
+
+    <!-- help is my comentt -->
+    <!--hej på dig-->
+    <!-- Emma -->
+    <!--test igen-->
 <h1>TEST COMMIT OKAY HEY</h1>
     <h2>HEJ ALLA BARN</h2>
 </div>
