--- a/index.html
+++ b/index.html
@@ -2,22 +2,20 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
 <div class="container">
     <div class="shutter"></div>
-    <div class="shutter"></div>
-    <div class="shutter"></div>
-    <div class="shutter"></div>
-    <div class="shutter"></div>
-    <div class="shutter"></div>
+
     <!--Hej, från Gabriella-->
     <!-- Andrej -->
     <!-- Hello this is Oliver Ström and this is my comment -->
     <!-- Helo this is Havia Mats and this is my comentt -->
-<!-- help!  this is Havia Mats and this is my comentt -->
+    <!-- help!  this is Havia Mats and this is my comentt -->
 </div>
 </body>
 </html>
