--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="shutter"></div>
+    <div class="shutter">Static &lt;div&gt;</div>
 
     <!--Hej, från Gabriella-->
     <!-- Andrej -->
