--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Sniglet:400,800|Plaster|Lemon' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="script.js"></script>
@@ -9,7 +10,10 @@
 </head>
 <body>
 <div class="container">
+
+<!--
     <div class="shutter">Static &lt;div&gt;</div>
+-->
 
     <!--Hej, från Gabriella-->
     <!-- Andrej -->
