--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <link href='https://fonts.googleapis.com/css?family=Sniglet:400,800|Plaster|Lemon' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <title></title>
 </head>
 <body>
-<div class="container">
+<div id="container">
 
-<!--
-    <div class="shutter">Static &lt;div&gt;</div>
--->
+    <!--
+        <div class="shutter">Static &lt;div&gt;</div>
+    -->
 
     <!--Hej, från Gabriella-->
     <!-- Andrej -->
