--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Sniglet:400,800|Plaster|Lemon' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="http://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
+    <script src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <title></title>
@@ -16,11 +16,6 @@
         <div class="shutter">Static &lt;div&gt;</div>
     -->
 
-    <!--Hej, från Gabriella-->
-    <!-- Andrej -->
-    <!-- Hello this is Oliver Ström and this is my comment -->
-    <!-- Helo this is Havia Mats and this is my comentt -->
-    <!-- help!  this is Havia Mats and this is my comentt -->
 </div>
 </body>
 </html>
