--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="styles.css" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
-    <script src="script.js"></script>
+    <script src="rainyday.js"></script>
+	<script src="script.js"></script>
     <meta charset="UTF-8">
     <title></title>
 </head>
