Lol i don't troll

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="container">
-<h1>Jul Kalenderrrrrr</h1>
+<h1>Jul Kalender</h1>
     <!--
         <div class="shutter">Static &lt;div&gt;</div>
     -->
