--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 <div id="container">
-<h1>Jul Kalender</h1>
+<div id="header">
+    <h1>Jul Kalender 2015</h1>
+</div>
     <!--
         <div class="shutter">Static &lt;div&gt;</div>
     -->
