role a wave on the title

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js"></script>
     <script src="rainyday.js"></script>
+    <script src="Sizzle.js"></script>
+    <script src="typesetting.js"></script>
 	<script src="script.js"></script>
     <meta charset="UTF-8">
     <title></title>
@@ -13,7 +15,7 @@
 <body>
 <div id="container">
 <div id="header">
-    <h1>Jul Kalender 2015</h1>
+    <h1 class="title">Jul Kalender 2015</h1>
 </div>
     <!--
         <div class="shutter">Static &lt;div&gt;</div>
